rstsr-aocl-ffi/header/blis.h

		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
#define cgbmv                     CGBMV
#define chemv                     CHEMV
#define cher                      CHER
#define cher2                     CHER2
#define chpmv                     CHPMV
#define chpr                      CHPR
#define chpr2                     CHPR2
#define dgbmv                     DGBMV
#define dsbmv                     DSBMV
#define dspr                      DSPR
#define dspr2                     DSPR2
#define sgbmv                     SGBMV
#define ssbmv                     SSBMV
#define sspr                      SSPR
#define sspr2                     SSPR2
#define zgbmv                     ZGBMV
#define zhemv                     ZHEMV
#define zher                      ZHER
#define zher2                     ZHER2
#define zhpmv                     ZHPMV
#define zhpr                      ZHPR
#define zhpr2                     ZHPR2
typedef double bla_double;
BLIS_EXPORT_BLIS void sgbmv(const char   *trans, const f77_int *m, const f77_int *n, const f77_int *kl, const f77_int *ku, const float  *alpha, const float  *a, const f77_int *lda, const float  *x, const f77_int *incx, const float  *beta, float  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void ssbmv(const char   *uplo, const f77_int *n, const f77_int *k, const float  *alpha, const float  *a, const f77_int *lda, const float  *x, const f77_int *incx, const float  *beta, float  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void sspr(const char   *uplo, const f77_int *n, const float  *alpha, const float  *x, const f77_int *incx, float  *ap);
BLIS_EXPORT_BLIS void sspr2(const char   *uplo, const f77_int *n, const float  *alpha, const float  *x, const f77_int *incx, const float  *y, const f77_int *incy, float  *ap);
BLIS_EXPORT_BLIS void dgbmv(const char   *trans, const f77_int *m, const f77_int *n, const f77_int *kl, const f77_int *ku, const double *alpha, const double *a, const f77_int *lda, const double *x, const f77_int *incx, const double *beta, double *y, const f77_int *incy);
BLIS_EXPORT_BLIS void dsbmv(const char   *uplo, const f77_int *n, const f77_int *k, const double *alpha, const double *a, const f77_int *lda, const double *x, const f77_int *incx, const double *beta, double *y, const f77_int *incy);
BLIS_EXPORT_BLIS void dspr(const char   *uplo, const f77_int *n, const double *alpha, const double *x, const f77_int *incx, double *ap);
BLIS_EXPORT_BLIS void dspr2(const char   *uplo, const f77_int *n, const double *alpha, const double *x, const f77_int *incx, const double *y, const f77_int *incy, double *ap);
BLIS_EXPORT_BLIS void cgbmv(const char   *trans, const f77_int *m, const f77_int *n, const f77_int *kl, const f77_int *ku, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *x, const f77_int *incx, const scomplex  *beta, scomplex  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void chemv(const char   *uplo, const f77_int *n, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *x, const f77_int *incx, const scomplex  *beta, scomplex  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void chpmv(const char   *uplo, const f77_int *n, const scomplex  *alpha, const scomplex  *ap, const scomplex  *x, const f77_int *incx, const scomplex  *beta, scomplex  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void cher(const char   *uplo, const f77_int *n, const float  *alpha, const scomplex  *x, const f77_int *incx, scomplex  *a, const f77_int *lda);
BLIS_EXPORT_BLIS void chpr(const char   *uplo, const f77_int *n, const float  *alpha, const scomplex  *x, const f77_int *incx, scomplex  *ap);
BLIS_EXPORT_BLIS void cher2(const char   *uplo, const f77_int *n, const scomplex  *alpha, const scomplex  *x, const f77_int *incx, const scomplex  *y, const f77_int *incy, scomplex  *a, const f77_int *lda);
BLIS_EXPORT_BLIS void chpr2(const char   *uplo, const f77_int *n, const scomplex  *alpha, const scomplex  *x, const f77_int *incx, const scomplex  *y, const f77_int *incy, scomplex  *ap);
BLIS_EXPORT_BLIS void zgbmv(const char   *trans, const f77_int *m, const f77_int *n, const f77_int *kl, const f77_int *ku, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *x, const f77_int *incx, const dcomplex *beta, dcomplex *y, const f77_int *incy);
BLIS_EXPORT_BLIS void zhemv(const char   *uplo, const f77_int *n, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *x, const f77_int *incx, const dcomplex *beta, dcomplex *y, const f77_int *incy);
BLIS_EXPORT_BLIS void zhpmv(const char   *uplo, const f77_int *n, const dcomplex *alpha, const dcomplex *ap, const dcomplex *x, const f77_int *incx, const dcomplex *beta, dcomplex *y, const f77_int *incy);
BLIS_EXPORT_BLIS void zher(const char   *uplo, const f77_int *n, const double *alpha, const dcomplex *x, const f77_int *incx, dcomplex *a, const f77_int *lda);
BLIS_EXPORT_BLIS void zhpr(const char   *uplo, const f77_int *n, const bla_double *alpha, const dcomplex *x, const f77_int *incx, dcomplex *ap);
BLIS_EXPORT_BLIS void zher2(const char   *uplo, const f77_int *n, const dcomplex *alpha, const dcomplex *x, const f77_int *incx, const dcomplex *y, const f77_int *incy, dcomplex *a, const f77_int *lda);
BLIS_EXPORT_BLIS void zhpr2(const char   *uplo, const f77_int *n, const dcomplex *alpha, const dcomplex *x, const f77_int *incx, const dcomplex *y, const f77_int *incy, dcomplex *ap);
		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;