rstsr-openblas-ffi/src/f77blas.rs

    pub fn zsyr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn xsyr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn sspr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
    );
    pub fn dspr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
    );
    pub fn qspr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
    );
    pub fn cspr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
    );
    pub fn zspr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
    );
    pub fn xspr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
    );
    pub fn sspr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
    );
    pub fn dspr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
    );
    pub fn qspr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
    );
    pub fn cspr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
    );
    pub fn zspr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
    );
    pub fn xspr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
    );
    pub fn cher(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
    );
    pub fn zher(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
    );
    pub fn xher(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
    );
    pub fn chpr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
    );
    pub fn zhpr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
    );
    pub fn xhpr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
    );
    pub fn cher2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn zher2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn xher2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn chpr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
    );
    pub fn zhpr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
    );
    pub fn xhpr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
    );
    pub fn chemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut f32,
        arg10: *mut blas_int,
    );
    pub fn zhemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut f64,
        arg10: *mut blas_int,
    );
    pub fn xhemv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
    );
    pub fn chpmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn zhpmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn xhpmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn snorm(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    ) -> c_int;
    pub fn dnorm(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    ) -> c_int;
    pub fn cnorm(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    ) -> c_int;
    pub fn znorm(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    ) -> c_int;
    pub fn sgbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    );
    pub fn dgbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut blas_int,
        arg11: *mut f64,
        arg12: *mut f64,
        arg13: *mut blas_int,
    );
    pub fn qgbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
        arg11: *mut xdouble,
        arg12: *mut xdouble,
        arg13: *mut blas_int,
    );
    pub fn cgbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut blas_int,
        arg11: *mut f32,
        arg12: *mut f32,
        arg13: *mut blas_int,
    );
    pub fn zgbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut blas_int,
        arg11: *mut f64,
        arg12: *mut f64,
        arg13: *mut blas_int,
    );
    pub fn xgbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
        arg11: *mut xdouble,
        arg12: *mut xdouble,
        arg13: *mut blas_int,
    );
    pub fn ssbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
    pub fn dsbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut blas_int,
        arg9: *mut f64,
        arg10: *mut f64,
        arg11: *mut blas_int,
    );
    pub fn qsbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
        arg9: *mut xdouble,
        arg10: *mut xdouble,
        arg11: *mut blas_int,
    );
    pub fn csbmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut blas_int,
        arg9: *mut f32,
        arg10: *mut f32,
        arg11: *mut blas_int,
    );
